documentacion/obtenida/ARINC 429/driver and software/PC708-1/API/P71W32.H

typedef void VOID;
typedef void * LPVOID;
typedef int INT;
typedef unsigned short USHORT;
typedef unsigned short * LPUSHORT;
typedef unsigned long ULONG;
typedef unsigned long * LPULONG;
typedef const char * LPCSTR;
typedef int BOOL;
typedef int HCARD;
typedef int ERRVAL;

P71W32API USHORT __stdcall PC708_DspBioRd(HCARD handleval);

P71W32API ERRVAL __stdcall PC708_DspIntfClear(HCARD handleval);

P71W32API BOOL __stdcall PC708_DspIntfRead(HCARD handleval);

P71W32API ERRVAL __stdcall PC708_DspIntmClear(HCARD handleval);

P71W32API ERRVAL __stdcall PC708_DspIntmSet(HCARD handleval);

P71W32API ERRVAL __stdcall PC708_DspXfClear(HCARD handleval);

P71W32API ERRVAL __stdcall PC708_DspXfSet(HCARD handleval);

P71W32API LPCSTR __stdcall PC708_ErrDesc(INT errval);

P71W32API LPCSTR __stdcall PC708_ErrDescStr(INT errval);

P71W32API LPCSTR __stdcall PC708_ErrName(INT errval);

P71W32API ERRVAL __stdcall PC708_ErrorDefine(BOOL busb,USHORT intfreq,HCARD handleval);

P71W32API BOOL __stdcall PC708_ExtDinRd(HCARD handleval);

P71W32API VOID __stdcall PC708_ExtDinWr(BOOL dinval,HCARD handleval);

P71W32API BOOL __stdcall PC708_ExtDoutRd(HCARD handleval);

P71W32API VOID __stdcall PC708_ExtDoutWr(BOOL doutval,HCARD handleval);

P71W32API VOID __stdcall PC708_FileClose(LPVOID handle);

P71W32API BOOL __stdcall PC708_FileErr(VOID);

P71W32API VOID __stdcall PC708_FileErrClr(VOID);

P71W32API VOID __stdcall PC708_FileErrSet(VOID);

P71W32API LPVOID __stdcall PC708_FileOpenRead(LPCSTR filename);

P71W32API LPVOID __stdcall PC708_FileOpenWrite(LPCSTR filename);

P71W32API BOOL __stdcall PC708_FileRead(LPVOID handle,LPVOID buffer,USHORT count);

P71W32API BOOL __stdcall PC708_FileSeek(LPVOID handle,ULONG offset);

P71W32API ULONG __stdcall PC708_FileTell(LPVOID handle);

P71W32API BOOL __stdcall PC708_FileWrite(LPVOID handle,LPVOID buffer,USHORT count);

P71W32API USHORT __stdcall PC708_GetHigh(ULONG val);

P71W32API USHORT __stdcall PC708_GetLow(ULONG val);

P71W32API USHORT __stdcall PC708_GlobalRdW(USHORT addrval,HCARD handleval);

P71W32API VOID __stdcall PC708_GlobalWrW(USHORT value,USHORT addrval,HCARD handleval);

P71W32API ERRVAL __stdcall PC708_HandleDel(HCARD handleval);

P71W32API ERRVAL __stdcall PC708_HandleGet(LPULONG memval,LPULONG sizval,LPULONG ioval,LPUSHORT irqval,LPUSHORT drqval,HCARD handleval);

P71W32API HCARD __stdcall PC708_HandleGetIo(USHORT ioval);

P71W32API HCARD __stdcall PC708_HandleGetMem(ULONG memval);

P71W32API HCARD __stdcall PC708_HandleIns(LPCSTR cardname,ULONG memval,USHORT ioval,USHORT irqval,USHORT drqval,LPVOID hAppWnd,USHORT uiRemovalMsg);

P71W32API BOOL __stdcall PC708_HandleOkay(HCARD handleval);

P71W32API ULONG __stdcall PC708_HeapAlloc(ULONG wordcount,HCARD handleval);

P71W32API ULONG __stdcall PC708_HeapAllocAll(LPULONG wordcount,HCARD handleval);

P71W32API ULONG __stdcall PC708_HeapAllocEx(USHORT configval,ULONG wordcount,HCARD handleval);

P71W32API ULONG __stdcall PC708_HeapWipe(HCARD handleval);

P71W32API USHORT __stdcall PC708_IndirectRd(USHORT addrval,HCARD handleval);

P71W32API VOID __stdcall PC708_IndirectWr(USHORT value,USHORT addrval,HCARD handleval);

P71W32API ERRVAL __stdcall PC708_IntClear(HCARD handleval);

P71W32API ERRVAL __stdcall PC708_IntConfig(ULONG configval,USHORT count,HCARD handleval);

P71W32API ERRVAL __stdcall PC708_IntDisable(HCARD handleval);

P71W32API ERRVAL __stdcall PC708_IntEnable(HCARD handleval);

P71W32API ERRVAL __stdcall PC708_IntEnableCond(HCARD handleval);

P71W32API LPVOID __stdcall PC708_IntGet(HCARD handleval);

P71W32API VOID __stdcall PC708_IntReset(HCARD handleval);

P71W32API USHORT __stdcall PC708_IORdW(USHORT addrval,HCARD handleval);

P71W32API USHORT __stdcall PC708_IOWINRdW(USHORT addrval,HCARD handleval);

P71W32API VOID __stdcall PC708_IOWINWrW(USHORT value,USHORT addrval,HCARD handleval);

P71W32API VOID __stdcall PC708_IOWrW(USHORT value,USHORT addrval,HCARD handleval);