documentacion/obtenida/ARINC 429/driver and software/PC708-1/API/P71W32NET.CS

        [DllImport("P71W32.DLL", EntryPoint = "_PC708_DspBioRd@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt16 PC708_DspBioRd(UInt32 handleval);
        [DllImport("P71W32.DLL", EntryPoint = "_PC708_DspIntfClear@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 PC708_DspIntfClear(UInt32 handleval);
        [DllImport("P71W32.DLL", EntryPoint = "_PC708_DspIntfRead@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 PC708_DspIntfRead(UInt32 handleval);
        [DllImport("P71W32.DLL", EntryPoint = "_PC708_DspIntmClear@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 PC708_DspIntmClear(UInt32 handleval);
        [DllImport("P71W32.DLL", EntryPoint = "_PC708_DspIntmSet@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 PC708_DspIntmSet(UInt32 handleval);
        [DllImport("P71W32.DLL", EntryPoint = "_PC708_DspXfClear@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 PC708_DspXfClear(UInt32 handleval);
        [DllImport("P71W32.DLL", EntryPoint = "_PC708_DspXfSet@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 PC708_DspXfSet(UInt32 handleval);
        [DllImport("P71W32.DLL", EntryPoint = "_PC708_ErrDesc@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern IntPtr _PC708_ErrDesc(Int32 errval);
        public static string PC708_ErrDesc(Int32 errval) { return Marshal.PtrToStringAnsi(_PC708_ErrDesc(errval)); }
        [DllImport("P71W32.DLL", EntryPoint = "_PC708_ErrDescStr@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern IntPtr _PC708_ErrDescStr(Int32 errval);
        public static string PC708_ErrDescStr(Int32 errval) { return Marshal.PtrToStringAnsi(_PC708_ErrDescStr(errval)); }
        [DllImport("P71W32.DLL", EntryPoint = "_PC708_ErrName@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern IntPtr _PC708_ErrName(Int32 errval);
        public static string PC708_ErrName(Int32 errval) { return Marshal.PtrToStringAnsi(_PC708_ErrName(errval)); }
        [DllImport("P71W32.DLL", EntryPoint = "_PC708_ErrorDefine@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 PC708_ErrorDefine(Int32 busb, UInt16 intfreq, UInt32 handleval);
        [DllImport("P71W32.DLL", EntryPoint = "_PC708_ExtDinRd@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 PC708_ExtDinRd(UInt32 handleval);
        [DllImport("P71W32.DLL", EntryPoint = "_PC708_ExtDinWr@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern void PC708_ExtDinWr(Int32 dinval, UInt32 handleval);
        [DllImport("P71W32.DLL", EntryPoint = "_PC708_ExtDoutRd@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 PC708_ExtDoutRd(UInt32 handleval);
        [DllImport("P71W32.DLL", EntryPoint = "_PC708_ExtDoutWr@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern void PC708_ExtDoutWr(Int32 doutval, UInt32 handleval);
        [DllImport("P71W32.DLL", EntryPoint = "_PC708_FileClose@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern void PC708_FileClose(IntPtr handle);
        [DllImport("P71W32.DLL", EntryPoint = "_PC708_FileErr@0", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 PC708_FileErr();
        [DllImport("P71W32.DLL", EntryPoint = "_PC708_FileErrClr@0", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern void PC708_FileErrClr();
        [DllImport("P71W32.DLL", EntryPoint = "_PC708_FileErrSet@0", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern void PC708_FileErrSet();
        [DllImport("P71W32.DLL", EntryPoint = "_PC708_FileOpenRead@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern unsafe IntPtr* PC708_FileOpenRead(ref string filename);
        [DllImport("P71W32.DLL", EntryPoint = "_PC708_FileOpenWrite@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern unsafe IntPtr* PC708_FileOpenWrite(ref string filename);
        [DllImport("P71W32.DLL", EntryPoint = "_PC708_FileRead@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 PC708_FileRead(IntPtr handle, IntPtr buffer, UInt16 count);
        [DllImport("P71W32.DLL", EntryPoint = "_PC708_FileSeek@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 PC708_FileSeek(IntPtr handle, UInt32 offset);
        [DllImport("P71W32.DLL", EntryPoint = "_PC708_FileTell@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt32 PC708_FileTell(IntPtr handle);
        [DllImport("P71W32.DLL", EntryPoint = "_PC708_FileWrite@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 PC708_FileWrite(IntPtr handle, IntPtr buffer, UInt16 count);
        [DllImport("P71W32.DLL", EntryPoint = "_PC708_GetHigh@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt16 PC708_GetHigh(UInt32 val);
        [DllImport("P71W32.DLL", EntryPoint = "_PC708_GetLow@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt16 PC708_GetLow(UInt32 val);
        [DllImport("P71W32.DLL", EntryPoint = "_PC708_GlobalRdW@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt16 PC708_GlobalRdW(UInt16 addrval, UInt32 handleval);
        [DllImport("P71W32.DLL", EntryPoint = "_PC708_GlobalWrW@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern void PC708_GlobalWrW(UInt16 value, UInt16 addrval, UInt32 handleval);
        [DllImport("P71W32.DLL", EntryPoint = "_PC708_HandleDel@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 PC708_HandleDel(UInt32 handleval);
        [DllImport("P71W32.DLL", EntryPoint = "_PC708_HandleGet@24", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 PC708_HandleGet(ref UInt32 memval, ref UInt32 sizval, ref UInt32 ioval, ref UInt16 irqval, ref UInt16 drqval, UInt32 handleval);
        [DllImport("P71W32.DLL", EntryPoint = "_PC708_HandleGetIo@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt32 PC708_HandleGetIo(UInt16 ioval);
        [DllImport("P71W32.DLL", EntryPoint = "_PC708_HandleGetMem@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt32 PC708_HandleGetMem(UInt32 memval);
        [DllImport("P71W32.DLL", EntryPoint = "_PC708_HandleIns@28", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt32 PC708_HandleIns(ref string cardname, UInt32 memval, UInt16 ioval, UInt16 irqval, UInt16 drqval, IntPtr happwnd, UInt16 uiremovalmsg);
        [DllImport("P71W32.DLL", EntryPoint = "_PC708_HandleOkay@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 PC708_HandleOkay(UInt32 handleval);
        [DllImport("P71W32.DLL", EntryPoint = "_PC708_HeapAlloc@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt32 PC708_HeapAlloc(UInt32 wordcount, UInt32 handleval);
        [DllImport("P71W32.DLL", EntryPoint = "_PC708_HeapAllocAll@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt32 PC708_HeapAllocAll(ref UInt32 wordcount, UInt32 handleval);
        [DllImport("P71W32.DLL", EntryPoint = "_PC708_HeapAllocEx@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt32 PC708_HeapAllocEx(UInt16 configval, UInt32 wordcount, UInt32 handleval);
        [DllImport("P71W32.DLL", EntryPoint = "_PC708_HeapWipe@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt32 PC708_HeapWipe(UInt32 handleval);
        [DllImport("P71W32.DLL", EntryPoint = "_PC708_IndirectRd@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt16 PC708_IndirectRd(UInt16 addrval, UInt32 handleval);
        [DllImport("P71W32.DLL", EntryPoint = "_PC708_IndirectWr@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern void PC708_IndirectWr(UInt16 value, UInt16 addrval, UInt32 handleval);
        [DllImport("P71W32.DLL", EntryPoint = "_PC708_IntClear@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 PC708_IntClear(UInt32 handleval);
        [DllImport("P71W32.DLL", EntryPoint = "_PC708_IntConfig@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 PC708_IntConfig(UInt32 configval, UInt16 count, UInt32 handleval);
        [DllImport("P71W32.DLL", EntryPoint = "_PC708_IntDisable@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 PC708_IntDisable(UInt32 handleval);
        [DllImport("P71W32.DLL", EntryPoint = "_PC708_IntEnable@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 PC708_IntEnable(UInt32 handleval);
        [DllImport("P71W32.DLL", EntryPoint = "_PC708_IntEnableCond@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 PC708_IntEnableCond(UInt32 handleval);
        [DllImport("P71W32.DLL", EntryPoint = "_PC708_IntGet@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern unsafe IntPtr* PC708_IntGet(UInt32 handleval);
        [DllImport("P71W32.DLL", EntryPoint = "_PC708_IntReset@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern void PC708_IntReset(UInt32 handleval);
        [DllImport("P71W32.DLL", EntryPoint = "_PC708_IORdW@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt16 PC708_IORdW(UInt16 addrval, UInt32 handleval);
        [DllImport("P71W32.DLL", EntryPoint = "_PC708_IOWINRdW@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt16 PC708_IOWINRdW(UInt16 addrval, UInt32 handleval);
        [DllImport("P71W32.DLL", EntryPoint = "_PC708_IOWINWrW@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern void PC708_IOWINWrW(UInt16 value, UInt16 addrval, UInt32 handleval);
        [DllImport("P71W32.DLL", EntryPoint = "_PC708_IOWrW@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern void PC708_IOWrW(UInt16 value, UInt16 addrval, UInt32 handleval);
